# json-store

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  BUILD.sh  CODE_OF_CONDUCT.md  DEVELOPMENT.md  LICENSE.txt  README.md  README.txt  VERSION.sh  download-artifact.sh  pyproject.toml  setup.py
.github/: workflows
.github/workflows/: codeql.yml  main.yml
json_store/: __init__.py  json_store.py  shelve2json.py
scripts/: ci-build.sh
src/json_store/: __init__.py  json_store.py  shelve2json.py
test/: test_json_store.py
tests/: test_json_store.py  test_shelve2json.sh
