[tool.poetry]
name = "json-store"
version = "3.2"
description = "A shelve-like store using JSON serialization."
authors = ["jeremy avnet <brainsik@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/brainsik/json-store"
repository = "https://github.com/brainsik/json-store"
packages = [{include = "json_store"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.scripts]
shelve2json = "json_store.shelve2json:main"

[tool.poetry.dependencies]
python = "^2.7,^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
