[project]
dynamic = ["version"]
name = "json-store"
requires-python = ">=3.9"
dependencies = []

authors = [{name = "jeremy avnet", email = "json-store@theory.org"}]
description = "A shelve-like store using JSON serialization."
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["json", "shelve"]

classifiers = [
    "Development Status :: 5 - Production/Stable",

    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",

    "License :: OSI Approved :: MIT License",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/brainsik/json-store"
Repository = "https://github.com/brainsik/json-store.git"
Issues = "https://github.com/brainsik/json-store/issues"
Changelog = "https://github.com/brainsik/json-store/releases"

[project.scripts]
shelve2json = "json_store.shelve2json:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/json_store/__init__.py"

[tool.uv]
dev-dependencies = [
	"pytest >=8.3"
]
